# customer-support-agent

backend/: .env  .pre-commit-config.yaml  main.py  pyproject.toml
backend/agents/: dependencies.py  router.py
backend/agents/enums/: enums.py
backend/agents/model/agent/: orm.py
backend/agents/model/skills/: orm.py
backend/agents/model/tools/: orm.py
backend/agents/schema/agent/: api_contracts.py
backend/agents/schema/skills/: api_contracts.py
backend/agents/schema/tools/: api_contracts.py
backend/agents/schema/user/: api_contracts.py
backend/core/: config.py  database.py  security.py
backend/shared/: enums.py  exceptions.py
backend/tickets/: models.py  repository.py  router.py  schemas.py  service.py
backend/tickets/enums/: enums.py
backend/tickets/model/ticket/: orm.py
backend/tickets/model/ticketlog/: orm.py
backend/tickets/model/worknotes/: orm.py
backend/tickets/schema/ticket/: api_contracts.py
backend/tickets/schema/ticketlog/: api_contracts.py
backend/tickets/schema/worknotes/: api_contracts.py
backend/users/: repository.py  service.py
backend/users/enums/: enums.py
backend/users/model/role/: orm.py
backend/users/model/user/: orm.py
backend/users/schema/roles/: api_contracts.py
diagrams/: architecture.drawio  checklist.md  structure.md
support-agent/: .pre-commit-config.yaml  pyproject.toml
support-agent/src/support_agent/: main.py
support-agent/src/support_agent/api/: tickets.py  users.py
